--- a/ExViewer/Views/InfoPage.xaml
+++ b/ExViewer/Views/InfoPage.xaml
@@ -149,7 +149,7 @@
          SelectionChanged="pv_root_SelectionChanged">
     <Pivot.LeftHeader>
       <Border x:Name="bdSplitViewPlaceholder"
-              Height="48"
+              Height="{StaticResource AppBarThemeCompactHeight}"
               Width="0" />
     </Pivot.LeftHeader>
     <Pivot.RightHeader>
