--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -34,7 +34,7 @@
          BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
     <Pivot.LeftHeader>
       <Border x:Name="bdSplitViewPlaceholder"
-              Height="48"
+              Height="{StaticResource AppBarThemeCompactHeight}"
               Width="0" />
     </Pivot.LeftHeader>
     <Pivot.HeaderTemplate>
