--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -4,6 +4,7 @@
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
+        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
         <ResourceDictionary Source="Themes/GenericOverride.xaml" />
         <ResourceDictionary Source="Themes/NamedStyles.xaml" />
         <ResourceDictionary Source="Converters/Converters.xaml" />
