--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -700,7 +700,7 @@
     <Setter Property="FontSize"
             Value="20" />
     <Setter Property="Height"
-            Value="48" />
+            Value="{StaticResource AppBarThemeCompactHeight}" />
     <Setter Property="Width"
             Value="48" />
     <Setter Property="Padding"
