--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -40,13 +40,13 @@
   </Page.Resources>
   <RelativePanel>
     <tk:PullToRefreshListView x:Name="lv"
-                              RelativePanel.AlignTopWithPanel="True"
+                              RelativePanel.Below="ab"
                               RelativePanel.AlignBottomWithPanel="True"
                               RelativePanel.AlignLeftWithPanel="True"
                               RelativePanel.AlignRightWithPanel="True"
                               SelectionMode="None"
                               RefreshRequested="lv_RefreshRequested"
-                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0,x1,x0'), Mode=OneWay}"
                               Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                               ext:ScrollViewerExtensions.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                               ItemsSource="{x:Bind ViewModel.SearchResult, Mode=OneWay}"
@@ -82,7 +82,7 @@
       </ListView.Footer>
     </tk:PullToRefreshListView>
     <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
             RelativePanel.AlignLeftWithPanel="True"
             RelativePanel.AlignRightWithPanel="True" />
     <AppBar x:Name="ab"
@@ -96,7 +96,8 @@
       <Grid x:Name="gdAb"
             MaxHeight="{x:Bind caculateGdAbMaxHeight(VisibleBounds, root.ActualHeight), Mode=OneWay}">
         <Grid.RowDefinitions>
-          <RowDefinition Height="Auto" />
+          <RowDefinition MinHeight="{StaticResource AppBarThemeCompactHeight}"
+                         MaxHeight="{StaticResource AppBarThemeCompactHeight}" />
           <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -110,14 +111,15 @@
                         Grid.Column="1"
                         Grid.ColumnSpan="2"
                         QueryIcon="Find"
-                        Margin="8"
+                        Margin="8,0"
+                        VerticalAlignment="Center"
                         Text="{x:Bind ViewModel.Keyword, Mode=TwoWay}"
                         PlaceholderText="Search..."
                         controls:TagSuggestionService.IsEnabled="True"
                         controls:TagSuggestionService.InputScope="Search"
                         controls:TagSuggestionService.SubmitCommand="{x:Bind ViewModel.Search, Mode=OneWay}" />
         <ScrollViewer x:Name="sv_AdvancedSearch"
-                      Margin="0,0,0,12"
+                      Margin="0,4,0,12"
                       Grid.Row="1"
                       Grid.ColumnSpan="2"
                       IsEnabled="False"
