--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -3,6 +3,7 @@
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                           xmlns:local="using:ExViewer"
                           xmlns:controls="using:ExViewer.Controls"
+                          xmlns:tke="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                           mc:Ignorable="d"
@@ -10,7 +11,8 @@
                           x:Name="cd"
                           Loaded="cd_Loaded"
                           Opened="cd_Opened"
-                          PrimaryButtonText="Reset"
+                          PrimaryButtonText="{x:Bind VM.PrimaryButtonText, Mode=OneWay}"
+                          IsPrimaryButtonEnabled="{x:Bind VM.IsPrimaryButtonEnabled, Mode=OneWay}"
                           PrimaryButtonClick="cd_PrimaryButtonClick"
                           CloseButtonText="?"
                           CloseButtonClick="cd_CloseButtonClick"
@@ -19,25 +21,64 @@
     <Grid>
       <TextBlock x:Uid="Views/LogOnDialog/TitleTextBlock"
                  Text="LOG ON" />
-      <HyperlinkButton x:Uid="Views/LogOnDialog/RegisterHyperlinkButton"
-                       x:Name="btn_Register"
-                       Content="Register"
-                       HorizontalAlignment="Right"
-                       Style="{StaticResource TextBlockButtonStyle}"
-                       Padding="0"
-                       NavigateUri="https://forums.e-hentai.org/index.php?act=Reg&amp;CODE=00"
-                       FontSize="12" />
+      <StackPanel Orientation="Horizontal"
+                  HorizontalAlignment="Right">
+        <Grid Visibility="{x:Bind VM.LogOn.IsExecuting, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}">
+          <Button Style="{ThemeResource NormalTextBlockButtonStyle}"
+                  Content="Use cookie"
+                  Visibility="{x:Bind VM.UseCookieLogOn, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}"
+                  Padding="4"
+                  Click="btnUseCookie_Click" />
+
+          <Button Style="{ThemeResource NormalTextBlockButtonStyle}"
+                  Content="Use webpage"
+                  Visibility="{x:Bind VM.UseCookieLogOn, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                  Padding="4"
+                  Click="btnUseWebpage_Click" />
+        </Grid>
+
+        <HyperlinkButton x:Uid="Views/LogOnDialog/RegisterHyperlinkButton"
+                         x:Name="btn_Register"
+                         Content="Register"
+                         HorizontalAlignment="Right"
+                         Style="{StaticResource TextBlockButtonStyle}"
+                         NavigateUri="https://forums.e-hentai.org/index.php?act=Reg&amp;CODE=00"
+                         Padding="4"
+                         FontSize="12" />
+      </StackPanel>
     </Grid>
   </ContentDialog.Title>
   <Grid x:Name="gdContentRoot">
     <WebView x:Name="wv"
+             Visibility="{x:Bind VM.UseCookieLogOn, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}"
              DefaultBackgroundColor="{x:Bind ((SolidColorBrush)cd.Background).Color, Mode=OneWay}"
              DOMContentLoaded="wv_DOMContentLoaded"
              NavigationFailed="wv_NavigationFailed"
              ScriptNotify="wv_ScriptNotify" />
+    <StackPanel x:Name="spCookieLogOn"
+                Visibility="{x:Bind VM.UseCookieLogOn, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}">
+      <TextBox x:Name="tbMemberId"
+               tke:TextBoxRegex.ValidationMode="Normal"
+               tke:TextBoxRegex.Regex="^[1-9][0-9]*$"
+               Header="ipb_member_id"
+               Text="{x:Bind VM.MemberId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+               TextChanged="cookie_TextChanged" />
+      <TextBox x:Name="tbPassHash"
+               tke:TextBoxRegex.ValidationMode="Normal"
+               tke:TextBoxRegex.Regex="^[0-9a-fA-F]{32}$"
+               Header="ipb_pass_hash"
+               Text="{x:Bind VM.PassHash, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+               Margin="0,12"
+               TextChanged="cookie_TextChanged" />
+      <TextBlock x:Name="tbErrMsg"
+                 Visibility="{x:Bind VM.ShowErrorMsg, Mode=OneWay}"
+                 Text="{x:Bind VM.ErrorMsg, Mode=OneWay}"
+                 Style="{ThemeResource BaseTextBlockStyle}"
+                 Foreground="Red" />
+    </StackPanel>
     <Border x:Name="bdProgress"
             Background="{ThemeResource SystemControlBackgroundAltMediumHighBrush}"
-            Visibility="Collapsed">
+            Visibility="{x:Bind VM.LogOn.IsExecuting, Mode=OneWay}">
       <ProgressRing x:Name="pr"
                     Width="40"
                     Height="40"
